--- a/aw-tahliil/aw-tahliil site/css/styles.css
+++ b/aw-tahliil/aw-tahliil site/css/styles.css
@@ -1,4 +1,11 @@
- /* .corousel-inner > .corousel-item > img{
-    width: 10%;
-    margin: auto;
-} */
+.span{
+    border: 2px solid white;
+    height: 45px;
+    width: 45px;
+    text-align: center;
+    background-color: white;
+}
+.span .span-1{
+    margin-top: 5px;
+    font-size: 30px;
+}
