--- a/aw-tahliil/aw-tahliil site/css/styles.css
+++ b/aw-tahliil/aw-tahliil site/css/styles.css
@@ -1,11 +1,127 @@
-.span{
-    border: 2px solid white;
-    height: 45px;
-    width: 45px;
-    text-align: center;
-    background-color: white;
+ html, body{
+    box-sizing: border-box;
+    overflow-x: hidden;
+
 }
-.span .span-1{
-    margin-top: 5px;
-    font-size: 30px;
+/* jumbotorn */
+.jumbo{
+    background-color: #46858e;
+    color: #fff;
+}
+.aw{
+    color: #ff8080;
+}
+.jumbo h1{
+    font-weight: bold;
+    text-align: center;
+}
+.h-line {
+    height: 1px;
+}
+.jumbo p{
+    text-align: center;
+    font-weight: 100;
+}
+.jumb-btn-1 {
+    margin-bottom: 5px ;
+}
+.jumb-high{
+    margin: 10px;
+}
+.jumb-img img{
+   background-color: yellow;
+}
+.jumb-3{
+    display: none;
+}
+/* navigation part */
+   .navbar{
+       background-color: #ff8080;
+       color: white;
+       font-weight: bold;
+   }
+   .navbar .navbar-brand{
+       font-size: 36px;
+       color: #fff;
+   }
+   .fas{
+       font-size: 36px;
+       color: #fff;
+   }
+   .nav-link{
+       font-size: 22px;
+       margin-left: 10px;
+   }
+   
+ 
+/* end of navigation part */
+
+
+
+/* media quires */
+/* @media screen and (max-width: 769px){
+    .jumb-high p{
+        margin-left: 10px;
+        text-align: justify;
+        .nav-item{
+            width: 100%;
+            margin: 5px auto;
+            background-color: #46858e;
+            border-radius: 20px;
+        }
+        .nav-link{
+            margin-left: 20px;
+            font-size: 18px;
+        }
+        .nav-item:hover{
+            background-color: #724c4c;
+            transition: ease-in-out .3ms;
+            color: black;
+        }
+    }
+} */
+@media screen and (max-width: 992px){
+    .jumb-2{
+        display: none;
+    }
+    .jumb-3{
+        display: block;
+    }
+    .jumb-btn-1{
+        display: none;
+    }
+   
+    .jumbo h1{
+        font-size: 36px;
+    }
+    .aw{
+        font-size: 50px;
+    }
+    .jumb-high p{
+        margin-left: 10px;
+        text-align: justify;
+    }
+    img{
+        margin-right: 10px;
+    }
+    /* navbar section */
+       .nav-item{
+           width: 100%;
+           margin: 5px auto;
+           background-color: #46858e;
+           border-radius: 20px;
+       }
+       .nav-link{
+           margin-left: 20px;
+           font-size: 18px;
+       }
+       .nav-item:hover{
+           background-color: #724c4c;
+           transition: ease-in-out .3ms;
+           color: black;
+       }
+    /* end of navbar */
+}
+
+@media screen and (min-width: 991px){
 }
